# pmz

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cni  README.md  justfile
.github/: dependabot.yml
agent/: Cargo.toml  Dockerfile  build.rs
agent/src/: discovery.rs  main.rs  server.rs
agent/src/ctrl/: app.rs  crdgen.rs  lib.rs
cmd/: Cargo.toml
cmd/src/: main.rs
cni/: Cargo.toml  build.rs
cni/src/: config.rs  discovery.rs  intercept.rs  k8s.rs  lib.rs  main.rs  netns.rs  patcher.rs  server.rs
cni/src/plugin/: main.rs
common/: Cargo.toml
common/src/: lib.rs
ctl/: Cargo.toml  README.md
ctl/src/: main.rs
daemon/: Cargo.toml  build.rs
daemon/src/: command.rs  connect.rs  deploy.rs  discovery.rs  forward.rs  intercept.rs  main.rs  proxy.rs  route.rs  sudo.rs  tunnel.rs
docs/images/: local-access-to-k8s-workload.mov
ebpf/: Cargo.toml
ebpf/src/: context.rs  dns.rs  forwarder.rs  interceptor.rs  lib.rs  main.rs  resolver.rs  sock.rs
examples/: intercept-rule.yaml
panmunzom/: Cargo.toml  build.rs
panmunzom/src/: main.rs
proto/: Cargo.toml  build.rs  intercept.proto
proto/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: lib.rs  tunnel.rs
proxy/src/tunnel/: client.rs  server.rs  stream.rs  verifier.rs
tests/: echo-multinode.yaml  echo-test-ns.yaml  echo-udp.yaml  echo.yaml
