[workspace]
resolver = "2"
members = ["daemon", "common", "ebpf", "agent", "ctl", "proxy", "cni"]
default-members = ["daemon", "common", "ctl", "proxy"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.3", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5", default-features = false, features = ["std"] }
libc = { version = "0.2", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tokio = { version = "1.48", default-features = false }
which = { version = "8.0", default-features = false }

[profile.release.package.pmz-ebpf]
debug = 2
codegen-units = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = true
