[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
proxy = { package = "proxy", path = "../proxy"}

anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

clap = { workspace = true, features = ["derive"] }

kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
http-body-util = "0.1"
bytes = "1"
http = "1"
rustls-pemfile = "2.2.0"
rustls = "0.23.20"
tokio-rustls = "0.26.1"
hyper-rustls = "0.27.4"
h2 = "0.4.7"
udp-stream = "0.0.12"
uuid = { version = "1.16.0", features = ["v7"] }

