[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crdgen"
path = "src/ctrl/crdgen.rs"

[lib]
name = "ctrl"
path = "src/ctrl/lib.rs"

[dependencies]
proxy = { package = "proxy", path = "../proxy"}

anyhow = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true, features = ["attributes", "std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt", "smallvec", "std", "tracing-log", "env-filter"] }

clap = { workspace = true, features = ["derive"] }

kube = { version = "2.0", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
schemars = { version = "1.1", features = ["chrono04"] }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1"
bytes = "1"
http = "1.4"
rustls = "0.23"
tokio-stream = "0.1"
tracing-appender = "0.2"
h2 = "0.4"
udp-stream = "0.0.12"
uuid = { version = "1.18", features = ["v7"] }
thiserror = "2.0.12"
futures = "0.3.31"
