[package]
name = "cni"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cni-plugin"
path = "src/plugin/main.rs"

[dependencies]
common = { package = "pmz-common", path = "../common", features = ["user"] }
proto = { package = "proto", path = "../proto"}

anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "fs"] }
clap = { workspace = true, features = ["derive"] }

chrono = "0.4"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
nix = { version = "0.29", features = ["sched"] }
procfs = "0.17"
rsln = "0.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
tonic = "0.13"
socket2 = { version = "0.6", features = ["all"] }

[dev-dependencies]
tempfile = "3"
