[package]
name = "cni"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cni-plugin"
path = "src/plugin/main.rs"

[dependencies]
proto = { package = "proto", path = "../proto"}
ctrl = { package = "agent", path = "../agent" }

anyhow = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive"] }
libc = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "io-std", "fs"] }
tracing = { workspace = true, features = ["attributes", "std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt", "smallvec", "std", "tracing-log", "env-filter"] }

chrono = "0.4"
futures-util = { version = "0.3", default-features = false }
http = "1.2"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
kube = { version = "2.0", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
nix = { version = "0.29", features = ["sched"] }
procfs = "0.17"
rsln = "0.0.7"
rustls = "0.23.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
tonic = "0.14"
tracing-appender = "0.2"
socket2 = { version = "0.6", features = ["all"] }

[dev-dependencies]
tempfile = "3"
