[package]
name = "pmzctl"
version = "0.1.7"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/wqld/pmz/tree/main/ctl"
description = "A command-line tool that allows you to communicate with the pmz daemon to enable pmz features"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["attributes", "std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt", "smallvec", "std", "tracing-log", "env-filter"] }
clap = { workspace = true, default-features = true, features = ["derive"] }

hyper = { version = "1.5.2", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1", features = ["full"] }
http = "1.2.0"
nix = { version = "0.30", features = ["process", "signal", "user", "fs"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tracing-appender = "0.2"

[[bin]]
name = "pmzctl"
path = "src/main.rs"
