[package]
name = "pmz-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { package = "pmz-common", path = "../common", version = "0.1.0" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"
memoffset = "0.9.1"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "pmz"
path = "src/main.rs"
