[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.13", default-features = false, features = ["prost", "codegen"] }

[build-dependencies]
tonic-build = { version = "0.13", default-features = false, features = ["prost"] }
prost-build = "0.13"
