[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
# tonic-build = { version = "0.13", default-features = false, features = ["prost"] }
tonic-prost-build = "0.14"
# prost-build = "0.13"
