[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs"] }
tracing = { workspace = true, features = ["attributes", "std"] }

kube = { version = "2.0", features = ["runtime", "client", "derive", "ws"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
futures = "0.3"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
http-body-util = "0.1"
bytes = "1"
http = "1"
rustls = "0.23.20"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.1"
h2 = "0.4"
udp-stream = "0.0.12"
socket2 = { version = "0.6", features = ["all"] }
uuid = { version = "1.18", features = ["v7"] }

